--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
-.App-logo {
-  font-size: 15px;
-}
 h1 {
   text-align: center;
-  font-size: 20px;
+  font-size: 28px;
+}
+footer {
+  text-align: center;
+  padding: 10px;
 }
