--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 h1 {
   text-align: center;
-  font-size: 28px;
+  font-size: 32px;
 }
 footer {
   text-align: center;
+  font-size: 18px;
   padding: 10px;
+  font-style: italic;
+  font-family: Arial, Helvetica, sans-serif;
 }
