--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,19 @@
 h1 {
   text-align: center;
-  font-size: 32px;
+  font-size: 60px;
+  font-family: "Dancing Script", cursive;
 }
 footer {
   text-align: center;
-  font-size: 18px;
-  padding: 10px;
+  color: #fafaf6;
+  font-size: 30px;
   font-style: italic;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Dancing Script", cursive;
+}
+.name {
+  color: #ff5722;
+}
+footer a {
+  text-decoration: none;
+  color: #2d897b;
 }
